--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -15,5 +15,7 @@ jobs:
           java-version: 1.8
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Grant execute permission for gradle-wrapper.jar
+        run: chmod +x gradle/wrapper/gradle-wrapper.jar
       - name: Build with Gradle
         run: ./gradlew build --stacktrace --info
