[BOYSCOUT] Use Table-driven property checks from ScalaTest to factorize tests

--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,10 @@ dependencies {
     // Need scala-xml at test runtime
     testRuntimeOnly 'org.scala-lang.modules:scala-xml_2.13:1.2.0'
 }
+
+// Used to run Spec tests: ./gradlew spec
+task spec(dependsOn: ['testClasses'], type: JavaExec) {
+    main = 'org.scalatest.tools.Runner'
+    args = ['-R', 'build/classes/scala/test', '-o']
+    classpath = sourceSets.test.runtimeClasspath
+}
