--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -17,5 +17,7 @@ jobs:
         run: chmod +x gradlew
       - name: Grant execute permission for gradle-wrapper.jar
         run: chmod +x gradle/wrapper/gradle-wrapper.jar
+      - name: Test specs
+        run: ./gradlew spec
       - name: Build with Gradle
         run: ./gradlew build --stacktrace --info
