[Boyscout] Clean Day11 by using Semigroupal from cats to generate directions

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     implementation 'org.scala-lang:scala-library:2.13.2'
+    implementation 'org.typelevel:cats-core_2.13:2.3.0'
 
     // Use Scalatest for testing
     testImplementation 'junit:junit:null'
