[Day18] Operation Order

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     implementation 'org.scala-lang:scala-library:2.13.2'
     implementation 'org.typelevel:cats-core_2.13:2.3.0'
 
+    implementation "org.scala-lang.modules:scala-parser-combinators_2.13:1.1.2"
+
     // Use Scalatest for testing
     testImplementation 'junit:junit:null'
     testImplementation 'org.scalatest:scalatest_2.13:3.1.2'
