--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,23 @@
-version = 2.7.5
+version = 3.7.2
+runner.dialect = scala213
+maxColumn                                 = 140
+// breaks long class/def definitions into multiline
+verticalMultiline.atDefnSite              = true
+// forces newline before and after implicit params
+newlines.implicitParamListModifierForce   = [before, after]
+// only format files tracked by git
+project.git                               = true
+// PreferCurlyFors: Replaces parentheses into curly braces in for comprehensions that contain multiple enumerator generators
+// RedundantBraces, RedundantParens: Remove redundant braces, parens
+rewrite.rules                             = [PreferCurlyFors, RedundantBraces, RedundantParens, SortImports]
+// Add spaces next to curly braces in imports
+spaces.inImportCurlyBraces                = true
+// more than standard align rules https://scalameta.org/scalafmt/docs/configuration.html#alignpresetmore
+style                                     = defaultWithAlign
+// all infix operators can be exempted from applying continuation indentation
+indentOperator.exemptScope                = all
+rewriteTokens {
+  "⇒" = "=>"
+  "→" = "->"
+  "←" = "<-"
+}
